# template-django-ninja

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  gunicorn.conf.py  manage.py  pyproject.toml  requirements.txt  scaffold_app.py
.github/workflows/: ci.yml
.trae/rules/: project_rules.md
api/: admin.py  api.py  apps.py  exceptions.py  models.py  schemas.py  services.py  views.py
api/migrations/: 0001_initial.py
api/tests/: conftest.py  test_api.py  test_models.py  test_services.py
apps/example/: admin.py  api.py  apps.py  models.py  schemas.py  services.py
apps/example/migrations/: 0001_initial.py
apps/example/tests/: conftest.py  test_api.py  test_models.py  test_services.py
common/: logging.py
common/base/: exceptions.py  models.py  schemas.py
config/: asgi.py  settings.py  urls.py  wsgi.py
deploy/: nginx.conf
docs/: README.md  architecture.md  getting-started.md  multi-app-guide.md  uv-best-practice.md
events/: __init__.py  admin.py  api.py  apps.py  models.py  schemas.py  services.py  views.py
events/migrations/: 0001_initial.py
events/tests/: test_api.py
