[project]
name = "django-ninja-template"
version = "1.0.0"
description = "基于 Django + django-ninja 的 RESTful API 后端模板项目"
requires-python = ">=3.12"
dependencies = [
    "Django==3.2.24",
    "django-ninja==1.3.0",
    "pydantic>=2.0.0",
    "email-validator>=2.0.0",
    "python-dotenv>=1.0.0",
    "django-cors-headers==3.14.0",
    "dj-database-url>=2.0.0",
]

[project.optional-dependencies]
db = [
    "mysqlclient>=2.1.0",
    "psycopg2-binary>=2.9.12",
]
redis = [
    "redis>=5.0.0",
    "django-redis>=4.12.1",
]
storage = [
    "Pillow>=10.0.0",
    "qiniu>=7.11.0",
    "oss2>=2.18.0",
]
excel = [
    "openpyxl>=3.1.0",
]
pdf = [
    "xhtml2pdf>=0.2.11",
    "pdfkit>=1.0.0",
]
auth = [
    "bcrypt>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-django>=4.8.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "django-stubs>=3.12.0",
    "bandit>=1.7.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/migrations/*.py" = ["I001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
strict = true
disallow_untyped_defs = true
disallow_any_generics = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["api.tests.*", "apps.*.tests.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["api.admin", "apps.*.admin", "gunicorn.conf"]
disallow_untyped_defs = false
disallow_any_generics = false

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
testpaths = ["api/tests", "apps/example/tests"]

[tool.coverage.run]
source = ["api", "config", "common", "apps"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.bandit]
exclude_dirs = ["tests", ".venv", "migrations"]
skips = ["B101"]

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "api*", "common*", "apps*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
